change tooltip position on mobile screen and fix one header property in translation

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -281,8 +281,8 @@
           .self-registration--btn {
             .tooltip {
               top: 210%;
-              left: 125%;
               width: 170px;
+              z-index: 1;
             }
           }
         }
